feat: add phone auth login screen with localization
Introduces a new login screen with phone number authentication using Firebase Auth. Adds localized strings for English, Japanese, and Korean, updates theming in main.dart, and enables language selection. Updates dependencies to include firebase_auth.

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,3 +1,9 @@
 {
-    
+  "phone_hint": "Enter your phone number",
+  "sms_hint": "Enter the verification code",
+  "send_code": "Send Code",
+  "verify": "Verify",
+  "phone_verify_failed": "Phone verification failed.",
+  "code_verify_failed": "Code verification failed.",
+  "choose_language": "Choose language"
 }
