--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -1,3 +1,9 @@
 {
-    
+  "phone_hint": "電話番号を入力してください",
+  "sms_hint": "認証コードを入力してください",
+  "send_code": "コードを送信",
+  "verify": "認証",
+  "phone_verify_failed": "電話認証に失敗しました。",
+  "code_verify_failed": "認証コードが正しくありません。",
+  "choose_language": "言語を選択"
 }
